# compPhysMidTerm

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  renderer.h  tracingRay.h  triangleSurface.h
report/: report.aux  report.tex
src/: gsl_example.c  main.c  program.c  renderer.c  triangleSurface.c
src/tests/: cameraRayGenerationTest.c  rayIntersectionTest.c  rayIntersectionTest.c~
